WIP edit and add planet. Updated endpoints
